# meson-with-vcpkg

./: Makefile  README.md  main.cpp  meson-vcpkg.txt  meson.build  vcpkg.json
